# machinge-learning-universtity

./: .gitignore  fashion_mnist_cnn_model.ipynb  pyproject.toml  readme.md
example/: CNN_model.py  MNIST_dataset.py  datasets.py  efficient_net_b0_finetuned.py  models.py
