[project]
name = "machine-learning-university"
authors = [
    {name = "Mateusz Sidor"},
    {name = "Igor Rudnik"},
    {name = "Marta Konieczna"}
]
version = "1.0.0"
description = "Muilticlass classification model made for Fashion MNIST dataset"
requires-python = ">=3.12"
dependencies = [
    "torch >= 2.7.0",
    "torchvision >= 0.22.0",
    "numpy == 2.3.0",
    "pandas == 2.3.0",
    "notebook>=7.4.3",
    "matplotlib == 3.10.3"
]


[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/nightly/cu128"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true